# ja-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/agents/: evaluation.md  plan.md  runner.md
app/core/: config.py  logging.py
app/core/db/: database.py
app/core/error/: errors.py  exception_handlers.py  exceptions.py
app/infra/: __init__.py
app/infra/document/: __init__.py  parser.py  schemas.py
app/infra/embedding/: __init__.py  embedder.py
